<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_edit_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp"
        android:drawableLeft="@mipmap/login_icon_phone_n_hdpi"
        android:hint="@string/register_edit_acc" />

    <EditText
        android:id="@+id/register_edit_yzm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_edit_acc"
        android:layout_alignParentTop="true"
        android:drawableLeft="@mipmap/login_icon_yzm_code_n_hdpi"
        android:layout_marginTop="176dp"
        android:hint="@string/register_edit_yzm" />

    <EditText
        android:id="@+id/register_edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableLeft="@mipmap/login_icon_lock_n_hdpi"
        android:layout_marginTop="224dp"
        android:hint="@string/register_edit_pwd" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_text_login"
        android:text="@string/register_text_login"
        android:layout_below="@id/register_edit_pwd"
        android:layout_alignParentRight="true"
        android:textSize="18sp" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn_registe"
        android:text="@string/register_btn_registe"
        android:layout_below="@id/register_text_login"
        android:textSize="18sp"/>

</RelativeLayout>