<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rb3_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rb3_checkbox_checkall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rb3_checkbox_checkall" />

        <TextView
            android:id="@+id/rb3_text_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rb3_text_money"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rb3_text_clearing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rb3_text_clearing"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
